@@ -189,8 +189,8 @@ public class TunnelFilter extends Filter {
             BufferedReader reader;
             try {
                 reader = new BufferedReader(new InputStreamReader(
-                        userAgentPropertiesUrl.openStream(), CharacterSet.UTF_8
-                                .getName()), IoUtils.getBufferSize());
+                        userAgentPropertiesUrl.openStream(),
+                        CharacterSet.UTF_8.getName()), IoUtils.BUFFER_SIZE);
 
                 AcceptReplacer.Builder acceptReplacerBuilder = new AcceptReplacer.Builder();
 
@@ -550,8 +550,8 @@ public class TunnelFilter extends Filter {
                         }
                         if (checked) {
                             ClientInfo clientInfo = new ClientInfo();
-                            PreferenceReader.addMediaTypes(acceptReplacer
-                                    .getAcceptNew(), clientInfo);
+                            PreferenceReader.addMediaTypes(
+                                    acceptReplacer.getAcceptNew(), clientInfo);
                             request.getClientInfo().setAcceptedMediaTypes(
                                     clientInfo.getAcceptedMediaTypes());
                             break;
