@@ -25,8 +25,14 @@ Changes log
         of template variables matched and their value. 
         Suggested by John Logdson.
       - Optimized routing when 0 characters are matched on an URI template.
+      - Added IoUtils.TIMEOUT_MS constant to globally configure I/O related
+        timeouts. Its value is 60 seconds by default, but can be configured
+        via the "org.restlet.engine.io.timeoutMs" system property. 
     - Bugs fixed
-      - Fixed writing of big representations. Reported by Tom Andersson.  
+      - Fixed writing of big representations. Reported by Tom Andersson. 
+      - Fixed IoUtils.BUFFER_SIZE constant to be properly configurable via
+        the "org.restlet.engine.io.bufferSize" system property. 
+        Reported by Tom Andersson.
     - Misc
       -
 
